--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "log4js": "^3.0.6",
     "moment": "^2.24.0",
     "mongoose": "^5.4.7",
+    "mongoose-auto-increment": "^5.0.1",
     "mongoose-csv": "^1.1.0",
     "morgan": "^1.9.0",
     "multer": "^1.4.1",
